# UConn_Momentum_Corrections

./: .gitignore  CMakeLists.txt  README.md
CLAS12/: Makefile
CLAS12/JSON_configs/: pip_CD_config.json
CLAS12/analysis/: CMakeLists.txt  make_initial_histograms.cpp  momcorr_config.json  pip_CD_make_histograms.cpp
CLAS12/executables/: Makefile  pip_CD_make_histograms
include/: ComputeMissingMassHelper.h  DeltaP.h  DeltaPRDF.h  EnergyCorr.h  ExclusiveKinematics.h  Kinematics.h  MissingMassRDF.h  MomCorrConfig.h  MomCorrParticle.h  ParticleUtils.h
include/calculations/: MomCorrParticle.h
include/fitting/: FitConfig.h  FitModel.h  FitResult.h  PeakFitter.h
lib/: CMakeLists.txt  DeltaP.cpp  MomCorrConfig.cpp  MomCorrParticle.cpp
lib/calculations/: MomCorrParticle.cpp
lib/fitting/: CMakeLists.txt  FitModel.cpp  PeakFitter.cpp
